--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <div class="logo" aria-hidden="true"></div>
         <div>
           <div class="title">SegnalaFacile</div>
-          <div class="badge">✨ PWA installabile • salvataggio locale • invio segnalazioni</div>
+          <div class="badge">📩 Invia segnalazioni</div>
         </div>
       </div>
       <button class="pill" id="installPill" style="display:none; cursor:pointer;" type="button">⬇️ Installa</button>
