--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             <h1>Segnala subito.</h1>
             <p>Descrivi cosa succede, aggiungi le foto e invia. Il tuo storico resta sul dispositivo.</p>
           </div>
-          <div class="heroGlow" aria-hidden="true"></div>
+          <img class="heroCover" src="images/hero.jpg" alt="Voci di Cassino" loading="lazy">
         </div>
 
         <div class="btnRow">
