--- a/index.html
+++ b/index.html
@@ -94,14 +94,17 @@
     .grid{display:grid; gap:14px}
 
     .card{
-      background: linear-gradient(180deg, var(--glass1), var(--glass2));
-      border: 1px solid var(--stroke);
-      border-radius: var(--r2);
-      padding: 16px;
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(12px);
-      position: relative;
-      overflow: hidden;
+     background: linear-gradient(145deg, rgba(38,86,108,.85), rgba(12,25,45,.85));
+     backdrop-filter: blur(16px);
+     border: 1px solid rgba(255,255,255,.12);
+     border-radius: 28px;
+     padding: 24px;
+     box-shadow: 0 20px 60px rgba(0,0,0,.35);
+     margin-bottom: 28px;
+     min-height: 60vh; /* 👈 riempie la schermata */
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
     }
     .card::before{
       content:"";
@@ -507,7 +510,21 @@
       fill: currentColor;
       opacity: .95;
     }
+    .emptyState{
+      text-align:center;
+      opacity:.85;
+      margin-top:40px;
+    }
 
+    .emptyIcon{
+      font-size:48px;
+      margin-bottom:10px;
+    }
+    .contactInfo{
+      margin-top:30px;
+      opacity:.75;
+      font-size:14px;
+    }
     @media (prefers-reduced-motion: no-preference){
       .card{animation: pop .18s ease both}
       @keyframes pop{
@@ -686,8 +703,12 @@
         </div>
 
         <div id="emptyState" class="hint" style="margin-top:12px">
-          Nessuna segnalazione salvata.
-        </div>
+        <div class="emptyState">
+        <div class="emptyIcon">📂</div>
+        <h3>Nessuna segnalazione</h3>
+        <p>Quando invii una segnalazione, la troverai qui.</p>
+      </div>
+    </div>
 
         <div id="list" class="list"></div>
       </div>
@@ -714,6 +735,9 @@
 
   <nav class="bottom">
     <div class="inner">
+    <div class="contactInfo">
+     <p>Risposta garantita nel minor tempo possibile.</p>
+    </div>
       <a href="#/" data-nav="home" class="active" aria-label="Home">
         <svg class="navIco" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3l9 8h-2v10a1 1 0 0 1-1 1h-5v-6H11v6H6a1 1 0 0 1-1-1V11H3l9-8z"/></svg>
         <span>Home</span>
