--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
       --glass1: rgba(255,255,255,.08);
       --glass2: rgba(255,255,255,.04);
+
+      --tabbar-h: 74px;
+      --tabbar-radius: 22px;
     }
 
     *{box-sizing:border-box}
@@ -47,10 +50,15 @@
         linear-gradient(180deg, var(--bg), var(--bg2));
     }
 
+    /* spazio sicuro per la tabbar premium */
+    body{
+      padding-bottom: calc(var(--tabbar-h) + 34px);
+    }
+
     .wrap{
       max-width: 920px;
       margin: 0 auto;
-      padding: 18px 16px 106px;
+      padding: 18px 16px 40px;
     }
 
     header{
@@ -77,34 +85,22 @@
       letter-spacing: -.35px;
       line-height: 1.05;
     }
-    .badge{
-      font-size:12.5px;
-      color: var(--muted);
-      border: 1px solid var(--stroke);
-      padding: 7px 10px;
-      border-radius: 999px;
-      background: rgba(255,255,255,.045);
-      backdrop-filter: blur(10px);
-      margin-top: 8px;
-      display:inline-flex;
-      gap:8px;
-      align-items:center;
-    }
 
     .grid{display:grid; gap:14px}
 
     .card{
-     background: linear-gradient(145deg, rgba(38,86,108,.85), rgba(12,25,45,.85));
-     backdrop-filter: blur(16px);
-     border: 1px solid rgba(255,255,255,.12);
-     border-radius: 28px;
-     padding: 24px;
-     box-shadow: 0 20px 60px rgba(0,0,0,.35);
-     margin-bottom: 28px;
-     min-height: 60vh; /* 👈 riempie la schermata */
-     display: flex;
-     flex-direction: column;
-     justify-content: space-between;
+      position: relative;
+      background: linear-gradient(145deg, rgba(38,86,108,.85), rgba(12,25,45,.85));
+      backdrop-filter: blur(16px);
+      border: 1px solid rgba(255,255,255,.12);
+      border-radius: 28px;
+      padding: 24px;
+      box-shadow: 0 20px 60px rgba(0,0,0,.35);
+      margin-bottom: 28px;
+      min-height: 60vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     .card::before{
       content:"";
@@ -114,6 +110,7 @@
                   radial-gradient(740px 160px at 85% 0%, rgba(25,195,125,.18), transparent 55%);
       pointer-events:none;
       opacity:.95;
+      border-radius: 28px;
     }
     .card > *{position:relative}
 
@@ -125,23 +122,23 @@
       gap:12px;
       flex-wrap:wrap;
     }
-    /* HERO COVER (immagine rettangolare stile copertina) */
-.heroCover{
-  width: 100%;
-  height: 180px;              /* aumenta a 200/220 se la vuoi più protagonista */
-  object-fit: cover;
-  border-radius: 24px;
-  border: 1px solid rgba(255,255,255,.12);
-  box-shadow: 0 18px 45px rgba(0,0,0,.38);
-  display: block;
-  margin: 14px 0 16px;
-  filter: saturate(1.05) contrast(1.02);
-}
 
-/* su schermi un po’ più grandi */
-@media (min-width: 520px){
-  .heroCover{ height: 210px; }
-}
+    /* HERO COVER */
+    .heroCover{
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 24px;
+      border: 1px solid rgba(255,255,255,.12);
+      box-shadow: 0 18px 45px rgba(0,0,0,.38);
+      display: block;
+      margin: 14px 0 16px;
+      filter: saturate(1.05) contrast(1.02);
+    }
+    @media (min-width: 520px){
+      .heroCover{ height: 210px; }
+    }
+
     .hero h1{
       margin:0 0 10px;
       font-size: 34px;
@@ -154,17 +151,6 @@
       font-size: 15px;
       line-height: 1.55;
       max-width: 62ch;
-    }
-    .heroGlow{
-      width: 120px;
-      height: 120px;
-      border-radius: 28px;
-      background: radial-gradient(circle at 30% 30%, rgba(45,125,255,.35), transparent 60%),
-                  radial-gradient(circle at 70% 70%, rgba(25,195,125,.28), transparent 65%),
-                  rgba(255,255,255,.04);
-      border: 1px solid rgba(255,255,255,.10);
-      box-shadow: 0 22px 48px rgba(0,0,0,.40);
-      flex: 0 0 auto;
     }
 
     .btnRow{display:flex; gap:10px; flex-wrap:wrap; margin-top:14px}
@@ -410,7 +396,7 @@
     .banner.success{border-color: rgba(25,195,125,.35); background: rgba(25,195,125,.12)}
     .banner.error{border-color: rgba(255,77,79,.35); background: rgba(255,77,79,.12)}
 
-    /* PROGRESS INVIO (1/3,2/3,3/3) */
+    /* PROGRESS INVIO */
     .progressWrap{
       margin-top: 12px;
       padding: 12px;
@@ -464,67 +450,119 @@
       line-height: 1.45;
     }
 
-    /* bottom nav: icone SVG grandi */
-    nav.bottom{
-      position: fixed;
-      left: 0; right: 0; bottom: 0;
-      background: rgba(9,14,28,.78);
-      border-top: 1px solid rgba(255,255,255,.10);
-      backdrop-filter: blur(14px);
-      z-index: 9999;
-    }
-    nav .inner{
-      max-width: 920px;
-      margin: 0 auto;
-      display:flex;
-      justify-content:space-around;
-      gap: 10px;
-      padding: 10px 12px;
-    }
-    nav a{
-      flex: 1;
-      text-align:center;
-      text-decoration:none;
-      color: var(--muted);
-      font-size: 12px;
-      padding: 10px 8px;
-      border-radius: 18px;
-      border: 1px solid transparent;
-      transition: background .12s ease, border-color .12s ease, transform .12s ease;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:6px;
-      font-weight: 900;
-    }
-    nav a:active{transform: translateY(1px)}
-    nav a.active{
-      color: var(--text);
-      background: rgba(255,255,255,.08);
-      border-color: rgba(255,255,255,.14);
-    }
-    .navIco{
-      width: 24px;
-      height: 24px;
-      display:block;
-      fill: currentColor;
-      opacity: .95;
-    }
+    /* Empty state EXACT */
     .emptyState{
       text-align:center;
       opacity:.85;
       margin-top:40px;
     }
-
     .emptyIcon{
       font-size:48px;
       margin-bottom:10px;
     }
-    .contactInfo{
-      margin-top:30px;
-      opacity:.75;
-      font-size:14px;
+
+    /* ===== Premium Bottom Tab Bar (Glass) ===== */
+    .tabbar{
+      position: fixed;
+      left: 12px;
+      right: 12px;
+      bottom: 12px;
+      height: var(--tabbar-h);
+      padding: 10px 12px;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 8px;
+      align-items: center;
+      z-index: 9999;
+
+      background: rgba(18, 28, 40, .55);
+      border: 1px solid rgba(255,255,255,.10);
+      border-radius: var(--tabbar-radius);
+      backdrop-filter: blur(14px);
+      -webkit-backdrop-filter: blur(14px);
+      box-shadow: 0 10px 30px rgba(0,0,0,.35);
     }
+
+    .tab{
+      position: relative;
+      height: 100%;
+      border: 0;
+      background: transparent;
+      color: rgba(255,255,255,.78);
+      border-radius: 18px;
+      display: grid;
+      place-items: center;
+      gap: 3px;
+      cursor: pointer;
+      transition: transform .12s ease, color .2s ease, background .2s ease, border-color .2s ease;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .tab:active{ transform: scale(.985); }
+
+    .tab .ico{
+      font-size: 26px;
+      line-height: 1;
+      display: inline-block;
+      transform-origin: 50% 60%;
+      filter: drop-shadow(0 8px 16px rgba(0,0,0,.25));
+    }
+    .tab .lbl{
+      font-size: 12px;
+      letter-spacing: .2px;
+      opacity: .85;
+      font-weight: 900;
+    }
+
+    .tab.is-active{
+      color: #fff;
+      background: linear-gradient(180deg, rgba(52,132,255,.28), rgba(52,132,255,.10));
+      border: 1px solid rgba(90,160,255,.22);
+    }
+    .tab.is-active .lbl{ opacity: 1; }
+
+    .tab-indicator{
+      position: absolute;
+      bottom: 8px;
+      left: 12px; /* allineamento interno */
+      width: calc((100% - 24px - 24px) / 4);
+      height: 4px;
+      border-radius: 999px;
+      background: rgba(120,190,255,.95);
+      box-shadow: 0 6px 16px rgba(80,170,255,.35);
+      transform: translateX(0);
+      transition: transform .25s cubic-bezier(.2,.9,.2,1);
+      pointer-events: none;
+    }
+
+    @keyframes popWiggle {
+      0%   { transform: scale(1) rotate(0deg); }
+      35%  { transform: scale(1.18) rotate(-6deg); }
+      70%  { transform: scale(1.10) rotate(5deg); }
+      100% { transform: scale(1) rotate(0deg); }
+    }
+    .tab.is-active .ico{
+      animation: popWiggle .38s ease;
+    }
+
+    /* micro-testo sopra la tabbar (non dentro la barra) */
+    .tabbarNoteWrap{
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: calc(var(--tabbar-h) + 18px);
+      z-index: 9998;
+      pointer-events: none;
+    }
+    .tabbarNote{
+      max-width: 920px;
+      margin: 0 auto;
+      padding: 0 16px;
+      color: rgba(234,240,255,.70);
+      font-size: 13px;
+      letter-spacing: .2px;
+      text-shadow: 0 8px 18px rgba(0,0,0,.35);
+    }
+
     @media (prefers-reduced-motion: no-preference){
       .card{animation: pop .18s ease both}
       @keyframes pop{
@@ -541,7 +579,7 @@
       <div class="brand">
         <div class="logo"></div>
         <div>
-          <div class="title">SegnalaFacile</div>         
+          <div class="title">SegnalaFacile</div>
         </div>
       </div>
       <button class="pill" id="installPill" style="display:none; cursor:pointer;" type="button">⬇️ Installa</button>
@@ -703,12 +741,12 @@
         </div>
 
         <div id="emptyState" class="hint" style="margin-top:12px">
-        <div class="emptyState">
-        <div class="emptyIcon">📂</div>
-        <h3>Nessuna segnalazione</h3>
-        <p>Quando invii una segnalazione, la troverai qui.</p>
-      </div>
-    </div>
+          <div class="emptyState">
+            <div class="emptyIcon">📂</div>
+            <h3 style="margin:0 0 6px;font-weight:980;">Nessuna segnalazione</h3>
+            <p style="margin:0;color:var(--muted);line-height:1.45;">Quando invii una segnalazione, la troverai qui.</p>
+          </div>
+        </div>
 
         <div id="list" class="list"></div>
       </div>
@@ -733,28 +771,34 @@
     </section>
   </div>
 
-  <nav class="bottom">
-    <div class="inner">
-    <div class="contactInfo">
-     <p>Risposta garantita nel minor tempo possibile.</p>
-    </div>
-      <a href="#/" data-nav="home" class="active" aria-label="Home">
-        <svg class="navIco" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3l9 8h-2v10a1 1 0 0 1-1 1h-5v-6H11v6H6a1 1 0 0 1-1-1V11H3l9-8z"/></svg>
-        <span>Home</span>
-      </a>
-      <a href="#/report" data-nav="report" aria-label="Segnala">
-        <svg class="navIco" viewBox="0 0 24 24" aria-hidden="true"><path d="M4 4h12a2 2 0 0 1 2 2v14H6a2 2 0 0 0-2 2V4zm4 4h8v2H8V8zm0 4h8v2H8v-2zm0 4h6v2H8v-2z"/><path d="M20 8h2v14a2 2 0 0 1-2 2H8v-2h12V8z"/></svg>
-        <span>Segnala</span>
-      </a>
-      <a href="#/my" data-nav="my" aria-label="Storico">
-        <svg class="navIco" viewBox="0 0 24 24" aria-hidden="true"><path d="M7 4h10a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2zm2 4h6v2H9V8zm0 4h6v2H9v-2zm0 4h4v2H9v-2z"/></svg>
-        <span>Storico</span>
-      </a>
-      <a href="#/contacts" data-nav="contacts" aria-label="Contatti">
-        <svg class="navIco" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 12a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0 2c-4.4 0-8 2-8 4.5V21h16v-2.5C20 16 16.4 14 12 14z"/></svg>
-        <span>Contatti</span>
-      </a>
-    </div>
+  <!-- nota sopra la tabbar (non dentro la barra) -->
+  <div class="tabbarNoteWrap" aria-hidden="true">
+    <div class="tabbarNote">Risposta garantita nel minor tempo possibile.</div>
+  </div>
+
+  <!-- PREMIUM TAB BAR -->
+  <nav class="tabbar" role="navigation" aria-label="Navigazione">
+    <button class="tab is-active" data-tab="home" type="button" aria-label="Home">
+      <span class="ico">🏠</span>
+      <span class="lbl">Home</span>
+    </button>
+
+    <button class="tab" data-tab="report" type="button" aria-label="Segnala">
+      <span class="ico">📝</span>
+      <span class="lbl">Segnala</span>
+    </button>
+
+    <button class="tab" data-tab="my" type="button" aria-label="Storico">
+      <span class="ico">🗂️</span>
+      <span class="lbl">Storico</span>
+    </button>
+
+    <button class="tab" data-tab="contacts" type="button" aria-label="Contatti">
+      <span class="ico">👤</span>
+      <span class="lbl">Contatti</span>
+    </button>
+
+    <span class="tab-indicator" aria-hidden="true"></span>
   </nav>
 
   <script>
@@ -825,15 +869,10 @@
       contacts: document.getElementById("view-contacts"),
     };
 
-    const navLinks = Array.from(document.querySelectorAll("nav a[data-nav]"));
-    function setActiveNav(key){
-      navLinks.forEach(a => a.classList.toggle("active", a.dataset.nav === key));
-    }
-
     function showView(key){
       Object.values(views).forEach(v => v.classList.add("hidden"));
       views[key].classList.remove("hidden");
-      setActiveNav(key);
+      setActiveTab(key);
       if(key === "my") renderList();
       window.scrollTo({ top: 0, behavior: "smooth" });
     }
@@ -1225,10 +1264,40 @@
       }
     });
 
+    // =========================
+    // Premium tabbar logic
+    // =========================
+    const tabs = Array.from(document.querySelectorAll(".tabbar .tab"));
+    const indicator = document.querySelector(".tabbar .tab-indicator");
+
+    function setActiveTab(key){
+      // se sei in success, evidenzia HOME (così non impazzisce)
+      const normalized = (key === "success") ? "home" : key;
+
+      tabs.forEach(t => t.classList.toggle("is-active", t.dataset.tab === normalized));
+      const active = tabs.find(t => t.dataset.tab === normalized) || tabs[0];
+
+      // sposta indicatore
+      const idx = tabs.indexOf(active);
+      const gap = 8;
+      // larghezza calcolata in CSS: (container - padding - padding)/4
+      // qui ci basta traslare di "slot"
+      indicator.style.transform = `translateX(${idx * (indicator.offsetWidth + gap)}px)`;
+    }
+
+    tabs.forEach(tab=>{
+      tab.addEventListener("click", () => {
+        const key = tab.dataset.tab;
+        location.hash = key === "home" ? "#/" : `#/${key}`;
+      });
+    });
+
     // init
     route();
     renderPhotoPreview();
     renderList();
+    // allinea indicatore subito
+    requestAnimationFrame(() => setActiveTab("home"));
   </script>
 </body>
 </html>
